[package]
name = "hl-services"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
regex.workspace = true
ed25519-dalek.workspace = true
rusqlite.workspace = true
subtle.workspace = true
once_cell.workspace = true

hl-core = { path = "../hl-core" }
hl-io = { path = "../hl-io" }