[package]
name = "usherd"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-util.workspace = true
clap.workspace = true
futures.workspace = true

hl-core = { path = "../hl-core" }
hl-io = { path = "../hl-io" }
hl-services = { path = "../hl-services" }